--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:hardwareAccelerated="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/YSR">
         android:name="android.support.multidex.MultiDexApplication">
         <activity android:name="io.usys.report.admin.AdminActivity"></activity>
         <activity android:name="io.usys.report.ui.fragments.ProfileFragment" />
