--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,7 +66,8 @@ dependencies {
     // Needed by Firebase Observable
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
 
-    implementation 'com.firebaseui:firebase-ui-auth:4.3.1'
+//    implementation 'com.firebaseui:firebase-ui-auth:4.3.1'
+    implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
 //    implementation 'com.google.firebase:firebase-auth:21.1.0'
     implementation 'com.google.firebase:firebase-firestore:24.4.0'
     implementation 'com.google.firebase:firebase-analytics:21.2.0'
