--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,8 @@
         android:supportsRtl="true"
         android:hardwareAccelerated="true"
         android:theme="@style/YSR">
-        android:name="android.support.multidex.MultiDexApplication">
-        <activity android:name="io.usys.report.admin.AdminActivity"></activity>
-        <activity android:name="io.usys.report.ui.fragments.ProfileFragment" />
+<!--        <activity android:name="io.usys.report.admin.AdminActivity"></activity>-->
+<!--        <activity android:name="io.usys.report.ui.fragments.ProfileFragment" />-->
         <activity
             android:name="io.usys.report.ui.AuthControllerActivity"
             android:label="@string/app_name"
@@ -42,16 +41,14 @@
             android:label="Main Location Manager Activity" />
         <activity
             android:name="io.usys.report.ui.MasterUserActivity"
-            android:label="Main Food Truck Activity" />
-        <activity
-            android:name="io.usys.report.ui.calendar.FoodCalendarFragment"
-            android:label="@string/title_activity_calendar_view" />
-        <activity
-            android:name="io.usys.report.basicUser.checkout.CheckoutActivity"
-            android:label="@string/pay" />
-        <activity
-            android:name="io.usys.report.ui.SpotDetailsActivity"
-            android:label="Spot Details" />
+            android:label="Main Food Truck Activity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="io.usys.report.ui.MasterUserActivity" />
+        </activity>
+<!--        <activity-->
+<!--            android:name="io.usys.report.ui.calendar.FoodCalendarFragment"-->
+<!--            android:label="@string/title_activity_calendar_view" />-->
         <activity
             android:name="io.usys.report.coachUser.CreateOrganizationActivity"
             android:label="Create Spot" />
