--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ android {
         jvmTarget = "1.8"
         apiVersion = "1.4"
         languageVersion = "1.4"
+        freeCompilerArgs = ['-Xinline-classes']
     }
 }
 
