--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:hardwareAccelerated="true"
         android:theme="@style/YSR">
 <!--        <activity android:name="io.usys.report.admin.AdminActivity"></activity>-->
-<!--        <activity android:name="io.usys.report.ui.fragments.ProfileFragment" />-->
+<!--        <activity android:name="io.usys.report.ui.ysr.user.ProfileFragment" />-->
         <activity
             android:name="io.usys.report.ui.AuthControllerActivity"
             android:label="@string/app_name"
@@ -40,11 +40,11 @@
             android:name="io.usys.report.coachUser.MainLocationManagerActivity"
             android:label="Main Location Manager Activity" />
         <activity
-            android:name="io.usys.report.ui.MasterUserActivity"
+            android:name="io.usys.report.ui.ysr.MasterUserActivity"
             android:label="Main Food Truck Activity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="io.usys.report.ui.MasterUserActivity" />
+                android:value="io.usys.report.ui.ysr.MasterUserActivity" />
         </activity>
 <!--        <activity-->
 <!--            android:name="io.usys.report.ui.calendar.FoodCalendarFragment"-->
