--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,7 @@ dependencies {
 //    implementation 'com.google.firebase:firebase-auth-ktx'
 
     implementation 'com.github.bumptech.glide:glide:4.14.2'
+    implementation 'androidx.databinding:databinding-runtime:4.2.2'
     kapt 'com.github.bumptech.glide:compiler:4.14.2'
 
     implementation 'joda-time:joda-time:2.10.9'
