--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,6 +78,7 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:22.0.0')
 //    implementation 'com.google.firebase:firebase-auth-ktx'
 
+    implementation 'androidx.viewpager2:viewpager2:1.1.0-alpha01'
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'com.github.bumptech.glide:glide:4.14.2'
     implementation 'androidx.databinding:databinding-runtime:4.2.2'
