--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,12 +14,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:hardwareAccelerated="true"
-        android:theme="@style/YSR">
+        android:theme="@style/LudiSplash">
 <!--        <activity android:name="io.usys.report.admin.AdminActivity"></activity>-->
 <!--        <activity android:name="io.usys.report.ui.ysr.user.ProfileFragment" />-->
         <activity
             android:name="io.usys.report.ui.AuthControllerActivity"
-            android:label="@string/app_name"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
