--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,8 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7"
     implementation "org.jetbrains.kotlin:kotlin-reflect:1.6.21"
 
+    implementation "com.github.skydoves:powermenu:2.2.2"
+
     // Needed by Firebase Observable
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
 
