--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,6 +87,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'com.github.bumptech.glide:glide:4.14.2'
     implementation 'androidx.databinding:databinding-runtime:4.2.2'
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
     kapt 'com.github.bumptech.glide:compiler:4.14.2'
 
     implementation 'joda-time:joda-time:2.10.9'
