--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,11 +6,12 @@ apply plugin: 'realm-android'
 
 android {
     buildToolsVersion "29.0.2"
+
     defaultConfig {
         applicationId "io.usys.report"
         minSdkVersion 26
         targetSdkVersion 33
-        compileSdkVersion 33
+        compileSdkVersion 31
         versionCode 5
         versionName "0.4"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -27,12 +28,12 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_11
-        targetCompatibility = JavaVersion.VERSION_11
+        sourceCompatibility = JavaVersion.VERSION_1_8
+        targetCompatibility = JavaVersion.VERSION_1_8
     }
 
     kotlinOptions {
-        jvmTarget = "11"
+        jvmTarget = "1.8"
         apiVersion = "1.4"
         languageVersion = "1.4"
         freeCompilerArgs = ['-Xinline-classes']
