--- a/app/build.gradle
+++ b/app/build.gradle
@@ -101,6 +101,8 @@ dependencies {
     implementation 'com.afollestad.material-dialogs:core:3.1.1'
     implementation 'com.google.firebase:firebase-storage-ktx:20.1.0'
 
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
+
     implementation 'de.hdodenhof:circleimageview:1.2.1'
 
 //    testImplementation 'junit:junit:4.12'
